package com.hottabych04.example.entity.driver;

public class BusDriver extends Driver {}