package com.hottabych04.example.entity.driver;

public abstract class Driver {}
