package com.hottabych04.example.entity.driver;

public class TaxiDriver extends Driver {}