package com.hottabych04.example.entity.passenger;

public class AdultPassenger extends Passenger {
    public AdultPassenger() {
        this.category = "Взрослый";
    }
}