package com.hottabych04.example.entity.passenger;

public class BeneficiaryPassenger extends Passenger {
    public BeneficiaryPassenger() {
        this.category = "Льготный";
    }
}
