package com.hottabych04.example.entity.passenger;

public class ChildPassenger extends Passenger {
    public ChildPassenger() {
        this.category = "Ребенок";
    }
}
