package com.hottabych04.example.entity.passenger;

public abstract class Passenger {
    protected String category;
    public String getCategory() {
        return category;
    }
}
