package com.hottabych04.example.entity.passenger;

public class TaxiAdultPassenger extends Passenger {
    public TaxiAdultPassenger() {
        this.category = "Взрослый";
    }
}
