package com.hottabych04.example.entity.passenger;

public class TaxiChildPassenger extends Passenger {
    public TaxiChildPassenger() {
        this.category = "Ребенок (необходимо детское кресло)";
    }
}
